force-app/main/default/objects/VS_Appointment__c/fields/VS_Booked_Channel__c.field-meta.xml
<CustomField>
    <fullName>VS_Booked_Channel__c</fullName>
    <label>Booked Channel</label>
    <description>How this appointment was booked, matching design §2.3 exactly: Portal (citizen Experience Cloud site, VS-16), Chat (future chat-assistant seam, Annexure C9 -- not built in F-001), Staff (facility staff booking on a citizen's behalf), WalkIn (booked at the facility on the day, draws from the session's walk-in reserve, D-006/D-009). Set by VS_BookingService.book(patientId, slotId, bookedById, channel) (VS-09) from its channel argument -- no default value, no automation in this ticket.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>WalkIn</fullName>
                <label>Walk In</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>