force-app/main/default/objects/VS_Appointment__c/fields/VS_Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>VS_Booking_Reference__c</fullName>
    <label>Booking Reference</label>
    <description>Unique, human-typeable booking reference for feature-phone check-in/lookup (REQ-002/REQ-019 -- field only here, check-in UI deferred). Per D-016, the value is a random, non-guessable 8-character Crockford base32 code generated by VS_ReferenceGenerator INSIDE VS_BookingService.book() (VS-09, Apex, dev-senior) at insert time. THIS TICKET (VS-08) DEFINES THE FIELD ONLY -- no before-save flow, no default-value formula, and no value is ever populated by this ticket, matching the same defined-not-populated pattern used for VS_Patient__c.VS_Match_Key__c (VS-07/D-017). Marked ExternalId+Unique so the DB rejects a colliding reference outright rather than relying on a prior SOQL uniqueness check (race-safe, same reasoning as D-017). Case-insensitive so a citizen reading the reference aloud or typing it on a feature phone does not need to match case exactly.</description>
    <type>Text</type>
    <length>8</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>