force-app/main/default/objects/VS_Appointment__c/fields/VS_Cancelled_At__c.field-meta.xml
<CustomField>
    <fullName>VS_Cancelled_At__c</fullName>
    <label>Cancelled At</label>
    <description>Timestamp this appointment was cancelled, paired with VS_Status__c = Cancelled so a cancellation is auditable (when, not just whether) -- supports the 4-hour cut-off check (D-010) and the audit-trail retention class (Annexure C4). THIS TICKET (VS-08) DEFINES THE FIELD ONLY: it is stamped by VS_BookingService.cancel() (VS-11, Apex, dev-senior) on a successful cancellation -- no automation sets it in this ticket.</description>
    <type>DateTime</type>
</CustomField>