force-app/main/default/objects/VS_Appointment__c/fields/VS_Dose_Number__c.field-meta.xml
<CustomField>
    <fullName>VS_Dose_Number__c</fullName>
    <label>Dose Number</label>
    <description>Which dose in the course this appointment represents (e.g. 1 for first dose, 2 for second), paired with VS_Service__c.VS_Dose_Count__c to show progress through a multi-dose vaccination course. Reserved as the enabling seam for the deferred next-dose recall feature (design §2.3); not consumed by any F-001 automation in this ticket -- set by the booking flow/service that creates the appointment.</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>