force-app/main/default/objects/VS_Appointment__c/fields/VS_Facility__c.field-meta.xml
<CustomField>
    <fullName>VS_Facility__c</fullName>
    <label>Facility</label>
    <description>Lookup (not Master-Detail) to VS_Facility__c, denormalized off VS_Session__c for sharing/reporting convenience (design §2.3) -- lets facility-scoped sharing rules (VS-20, REQ-053) and dashboards key off the appointment directly instead of joining through Session. Lookup because Facility is shared reference data (Public Read Only) that must never cascade-delete its bookings. Set by VS_BookingService.book() (VS-09) -- not defaulted or automated by this ticket. deleteConstraint=Restrict so a facility with existing appointments cannot be deleted out from under its booking history.</description>
    <type>Lookup</type>
    <referenceTo>VS_Facility__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>VS_Appointments</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>