force-app/main/default/objects/VS_Appointment__c/fields/VS_Session__c.field-meta.xml
<CustomField>
    <fullName>VS_Session__c</fullName>
    <label>Session</label>
    <description>Lookup (not Master-Detail) to VS_Session__c, denormalized off VS_Slot__c for sharing/reporting convenience (design §2.3) -- the session is also the single §3.4 lock target (D-019), so having it directly on the appointment lets sharing rules (VS-20, facility-scoped) and reports key off it without a join through the slot. Lookup, not Master-Detail, for the same reparent-on-reschedule reason as VS_Slot__c (design §2.4). Set by VS_BookingService.book()/reschedule() (VS-09/VS-11) -- not defaulted or automated by this ticket. deleteConstraint=Restrict so a session with existing appointments cannot be deleted out from under its booking history.</description>
    <type>Lookup</type>
    <referenceTo>VS_Session__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>VS_Appointments</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>