force-app/main/default/objects/VS_Appointment__c/fields/VS_Status__c.field-meta.xml
<CustomField>
    <fullName>VS_Status__c</fullName>
    <label>Status</label>
    <description>Appointment lifecycle status. Values match design §2.3 exactly: Booked (confirmed, online/staff/chat, default value at insert), CheckedIn (REQ-019, check-in UI deferred), Completed, Cancelled (set by VS_BookingService.cancel(), VS-11), NoShow (set by VS_NoShowBatch, VS-12), WalkIn (booked at the facility on the day, consumes the walk-in reserve). No automation sets or transitions this field in this ticket -- VS-09/VS-11/VS-12 (Apex) own all transitions.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
                <default>true</default>
                <label>Booked</label>
            </value>
            <value>
                <fullName>CheckedIn</fullName>
                <label>Checked In</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>NoShow</fullName>
                <label>No Show</label>
            </value>
            <value>
                <fullName>WalkIn</fullName>
                <label>Walk In</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>